--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
 			#moodi{
 				position: absolute;
 				width:100%;
-				top: 30%;
+				top: 10%;
 				z-index: 10;
 			}
 			audio{
@@ -52,11 +52,12 @@
 			}
 			.msg{
 				font-family: "Pacifico";
-			    font-size: 50px;
-			    color: rgba(255,255,255,0.6);
-			    display: block;
-			    position: relative;
-			    top:40px;
+			    font-size: 45px;
+			    color: #573A22;
+			    width:70%;
+			    position: absolute;
+			    bottom:3%;
+			    left: 28%;
 			}
 			.time{
 				font-family: "Homestead";
