--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 @font-face {
+			    font-family: 'Hawaiian Aloha';
+			    src: url('Fonts/hawaiian-aloha-btn-bold.ttf');
+			}
+			@font-face {
+			    font-family: 'Script Bold';
+			    src: url('Fonts/SCRIPTBL.TTF');
+			}
+			@font-face {
 			    font-family: 'Monospace Typewriter';
 			    src: url('Fonts/MonospaceTypewriter.ttf');
-			}
-			@font-face {
-			    font-family: 'Pacifico';
-			    src: url('Fonts/Pacifico.ttf');
-			}
-			@font-face {
-			    font-family: 'Homestead';
-			    src: url('Fonts/Homestead-Regular_0.ttf');
 			}
 			body{
 				/*background: url('back.jpg')no-repeat center center fixed; 
@@ -27,44 +27,61 @@
 			#moodi{
 				position: absolute;
 				width:100%;
-				top: 10%;
+				top: 4%;
 				z-index: 10;
 			}
 			audio{
 				display: none;
 			}
+			#logounit{
+				position: relative;
+				padding-bottom: 30px;
+				margin: auto 0;
+			}
+			#logo{
+				width: 50%
+			}
 			.timer{
 				font-family: "Monospace Typewriter";
 				font-size: 100px;
 				position: relative;
-				margin:4px;
+				margin: 4px;
 				height: 135px;
 				width: 80px;
-				/*background-color: rgba(255,255,255,0.6);*/
-				background-color: #000;
+				background-color: rgba(30,20,12,0.7);
 				border-radius: 20px;
 				color:#fff;
 				display: inline-block;
 			}
 			.timergroup{
-				width:20%;
+				width: 17%;
 				display: inline-block;
 			}
 			.msg{
-				font-family: "Pacifico";
+				font-family: "Script Bold";
 			    font-size: 45px;
 			    color: #573A22;
 			    width:70%;
 			    position: absolute;
-			    bottom:3%;
+			    bottom:5%;
 			    left: 28%;
 			}
 			.time{
-				font-family: "Homestead";
+				font-family: "Hawaiian Aloha";
 				font-size: 40px;
 				display: inline-block;
 				color: white;
 				width: 100%;
+			}
+			#micon{
+				width: 24px;
+				height: 24px;
+			}
+			#muteb{
+				position: absolute;
+				z-index: 10;
+				right: 2%;
+				bottom: 3%;
 			}
 
 
@@ -90,7 +107,7 @@
 				}
 				.msg{
 				    font-size: 30px;
-				    top:0px;`
+				    bottom:0px;`
 				}
 			}
 
@@ -117,7 +134,7 @@
 				}
 				.msg{
 				    font-size: 35px;
-				    top:15px;
+				    bottom: 0%;
 				}
 			}
 
@@ -139,6 +156,7 @@
 				}
 				.msg{
 				    font-size: 40px;
+				    bottom: 0%;
 				}
 			}
 
@@ -156,5 +174,6 @@
 				}
 				.msg{
 				    font-size: 45px;
+				    bottom: 0%;
 				}
 			}
