--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@
 				margin: auto 0;
 			}
 			#logo{
+				padding: 5px;
 				width: 50%
 			}
 			.timer{
@@ -48,7 +49,7 @@
 				margin: 4px;
 				height: 135px;
 				width: 80px;
-				background-color: rgba(30,20,12,0.7);
+				background-color: rgba(0,0,20,0.6);
 				border-radius: 20px;
 				color:#fff;
 				display: inline-block;
